# github-mcp-shim

./: README.md  flake.nix  pyproject.toml
github_mcp_shim/: __main__.py
